Fixing bottombar on mobile
Hopefully

--- a/static/entry/style.css
+++ b/static/entry/style.css
@@ -1062,7 +1062,8 @@ th {
 }
 #bottomBarContent {
 	display: flex; 
-	visibility: hidden
+	flex-wrap: wrap;
+	visibility: hidden;
 }
 #collapseBottomBar {
 	visibility: hidden;
